# Chernevich_ITK_Wk1

./: pyproject.toml
src/: lru_cache.py
src/2/: singleton_meta.py  singleton_module.py  singleton_new.py
src/3/: CreatedAtMeta.py
src/4/: search_at_list.py
src/5/: async_http.py  results.jsonl
src/6/: async_http_mod.py
src/7/: multiprocessing_number.py  processing_results.json
src/8/: asgi.py  common.py  test.py
