[project]
name = "venv"
version = "0.1.0"
description = "Реализация задач первой недели"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.2",
    "ruff>=0.14.4",
]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
