[project]
name = "venv"
version = "0.1.0"
description = "Реализация задач первой недели"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.2",
    "cheroot>=11.1.2",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.4",
    "unicorn>=2.1.4",
    "uvicorn>=0.38.0",
    "waitress>=3.0.2",
]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
